--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
+    <header> 
+        <h1>Diego Baeza</h1>
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
