--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="background-color">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +8,28 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
+<header class="center-text header-footer">
+    <h1>Diego U Baeza</h1>
+</header>
+
 <body>
-    <!-- Create a header element  -->
-    <header> 
-        <h1>Diego Baeza</h1>
-    <!-- Inside the header, add an <h1> element containing your name -->
+    <h2 class="subheader-text">Fun facts about me:</h2>
 
+    <ul class="body-text">
+        <ul> I travel frequently</ul>
+        <ul> I speak three languages</ul>
+        <ul> I fly airplanes</ul>
+    </ul>
+    
+<body>  
+        
+
+<footer class="quote-text header-footer"> 
+
+     <p>"It is the nature of every person to error, but only the fool perseveres in error." -Cicero</p>
+
+</footer>
     <!-- Include an image -->
-
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
