add image and more styling

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,22 +14,23 @@
 </header>
 
 <body>
-    <h2 class="subheader-text">Fun facts about me:</h2>
-
-    <ul class="body-text">
-        <ul> I travel frequently</ul>
-        <ul> I speak three languages</ul>
-        <ul> I fly airplanes</ul>
-    </ul>
-    
+    <div>
+        <div class="space">
+            <img class= "img" src="https://www.formula1.com/content/fom-website/en/drivers/sergio-perez/_jcr_content/image.img.640.medium.jpg/1646819228700.jpg" alt="Checo Perez">
+        </div>
+        <h2 class="subheader-text">Fun facts about me:</h2>
+            <ul class="body-text">
+                <ul> I travel frequently</ul>
+                <ul> I speak three languages</ul>
+                <ul> I fly airplanes</ul>
+            </ul>
+    </div>
 <body>  
         
-
 <footer class="quote-text header-footer"> 
 
      <p>"It is the nature of every person to error, but only the fool perseveres in error." -Cicero</p>
 
 </footer>
-    <!-- Include an image -->
-</body>
+
 </html>
